--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,13 @@
   },
   "env": {
     "DATABASE_URL": "@database_url",
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "NEXT_PUBLIC_BASE_URL": "@next_public_base_url"
   },
   "build": {
     "env": {
-      "DATABASE_URL": "@database_url"
+      "DATABASE_URL": "@database_url",
+      "NEXT_PUBLIC_BASE_URL": "@next_public_base_url"
     }
   }
 }
