Комплексное обновление проекта: миграция на PostgreSQL, новая структура БД, исправления в интерфейсе и API

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "db:init": "tsx scripts/init-database.ts",
+    "db:switch:postgres": "./scripts/switch-db.sh postgres",
+    "db:switch:sqlite": "./scripts/switch-db.sh sqlite",
+    "db:status": "./scripts/switch-db.sh",
     "postinstall": "prisma generate",
     "deploy": "npm run build && npm run db:migrate:prod && npm run db:init",
     "test": "vitest",
